--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
 				Haiii.
 			</p>
         	<p class="text-black text-sm sm:text-2xl bg-white bg-opacity-60 general-sans-regular">
-				Perkenalkan majalah UsWorks.
+				Perkenalkan majalah UsWorks,
 			</p>
         	<p class="text-black text-sm sm:text-2xl bg-white bg-opacity-60 general-sans-regular">
-				Majalah literatur dan seni
+				majalah literatur dan seni
 			</p>
         	<p class="text-black text-sm sm:text-2xl bg-white bg-opacity-60 general-sans-regular">
 				yang dibagikan secara gratis.	
@@ -62,7 +62,7 @@
 			</p>
 		</div>
 	</div>
-	<div class="bg-cover w-full bg-fixed h-screen bg-bottom" style="background-image: url('img/sky.webp');">
+	<div class="bg-cover w-full bg-fixed h-screen bg-bottom" style="background-image: url('img/sky.jpg');">
 		<div class="flex flex-col items-end justify-start mr-5 sm:p-20 h-screen">
         	<p class="text-white text-3xl sm:text-4xl bg-black bg-opacity-100 general-sans-semi-bold mt-20">
 				Kami ingin
@@ -152,8 +152,7 @@
 					pembagian majalah
 				</p>
     	    	<p class="text-black text-sm sm:text-2xl general-sans-regular sm:w-2/4">
-					Majalah UsWorks umumnya dibagikan di <i>event-event</i> jejepangan atau 
-					<i>event-event</i> literatur yang ada
+					Majalah UsWorks umumnya dibagikan di <i>event-event</i> yang ada
 					di Padang. Edisi baru keluar dengan tidak menentu. Pokoknya saat semua karya
 					yang akan dimuat sudah siap, kami akan langsung membagikan majalah UsWorks di
 					<i>event-event</i> dalam waktu dekat.
