--- a/kontribusi.html
+++ b/kontribusi.html
@@ -2,7 +2,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kirim karya - UsWorks</title>
+    <title>Berkontribusi - UsWorks</title>
     <style>
         @import url('css/general-sans.css');
         .general-sans-semi-bold {
@@ -20,81 +20,58 @@
 <body class="overflow-x-hidden">
 	<div class="flex flex-col items-start justify-start ml-5 sm:p-4 h-screen">
     	<h1 class="text-white text-2xl sm:text-5xl bg-black bg-opacity-100 general-sans-semi-bold mt-10">
-			Mengirim karya ke majalah
+			Menjadi penulis atau
 		</h1>
     	<h1 class="text-white text-2xl sm:text-5xl bg-black bg-opacity-100 general-sans-semi-bold">
-			UsWorks.
+			<i>artist</i> di
+		</h1>
+    	<h1 class="text-white text-2xl sm:text-5xl bg-black bg-opacity-100 general-sans-semi-bold">
+			majalah UsWorks
 		</h1>
     	<p class="text-black text-sm sm:text-lg bg-white bg-opacity-60 general-sans-regular mt-5">
 			Haiii, aku Chi, editor utama dari majalah UsWorks.
 		</p>
     	<p class="text-black text-sm sm:text-lg bg-white bg-opacity-60 general-sans-regular mt-5">
 			Sebelumnya, terima kasih udah mau mengunjungi website kami. Terima kasih lebih banyak lagi udah menaruh
-			perhatian pada majalah UsWorks ini. Di artikel ini, Chi akan menjelaskan prosedur pengiriman dan
-			pemuatan karya di majalah UsWorks
+			perhatian pada majalah UsWorks ini. Kami lagi mencari para penulis dan <i>artist</i> yang mau
+			bergabung di majalah UsWorks, nih! Berikut Chi jelaskan kegiatan-kegiatan kami.
 		</p>
     	<h2 class="text-white text-1xl sm:text-3xl bg-black bg-opacity-100 general-sans-semi-bold mt-10">
-			Pertama, mengirim tulisan.
+			Pertama, tulis-menulis.
 		</h2>
     	<p class="text-black text-sm sm:text-lg bg-white bg-opacity-60 general-sans-regular mt-5">
-			Jadi, majalah UsWorks sedang mencari penulis yang mau cerita atau artikelnya 
-			dimuat. Kami menerima penulis dengan latar belakang dan motivasi apapun.
+			Jadi, majalah UsWorks sedang mencari penulis yang mau cerita atau artikelnya dimuat.
+			Kami menerima penulis dengan latar belakang dan motivasi apapun.
 			Boleh jadi Kakak ingin memperbesar <i>reader base</i>
 			atau sekedar ingin tulisannya dibaca oleh orang-orang. 
 			Boleh jadi juga Kakak sudah lama menulis sebelum ini, 
 			baru memulai, atau malah Kakak baru saja berencana untuk memulai.
-			Bagaimana pun latar belakang Kakak, kami percaya pasti Kakak punya cerita yang layak
+			Bagaimana pun latar belakang Kakak, kami percaya pasti Kakak punya tulisan yang layak
 			untuk disampaikan. Tugas kami adalah membantu Kakak untuk memoles cerita Kakak lalu menyebarkannya. 
 		</p>
     	<p class="text-black text-sm sm:text-lg bg-white bg-opacity-60 general-sans-regular mt-5">
-			Oh ya, ada kemungkinan bakal ada <i>artist</i> yang mau ngebuat ilustrasi untuk cerita Kakak, lho!
+			Kakak bisa menulis cerbung/<i>series</i>, cerpen, artikel, dan bahkan puisi. Kakak
+			boleh menulis untuk setiap edisi, boleh juga menulis hanya untuk satu edisi. Kakak boleh
+			memberikan karya lama ataupun membuat karya baru. Kalau Kakak ingin membuat karya baru, nanti kita bisa
+			banyak berdiskusi untuk membantu Kakak menentukan tema, alur cerita, dan lain-lain. Kalau
+			Kakak mau bekerja sendiri juga tak apa, kok! Walau begitu, Chi, sebagai editor utama, bakal
+			tetap harus meneliti dan merevisi karya-karya Kakak, baik itu karya lama
+			ataupun baru, demi menjaga "bungkus" dari tulisan Kakak. 
+			Chi harus memastikan 
+			bahwa bahasanya rapi dan tata letaknya bersih. Jangan khawatir, Chi yang akan
+			banyak bekerja kalau soal itu. Chi juga akan tetap meminta persetujuan Kakak untuk setiap perubahan.
+			Akan kita diskusikan sama-sama hingga karya Kakak bisa terbungkus dengan 
+			bungkusan yang paling cantik dan rapi.
 		</p>
     	<p class="text-black text-sm sm:text-lg bg-white bg-opacity-60 general-sans-regular mt-5">
-			Nah, karena kami percaya bahwa setiap orang memiliki cerita yang layak untuk disampaikan,
-			kami tidak memakai batasan tema apapun. Selama cerita Kakak tidak menyinggung
-			SARA, tidak mengandung hal-hal asusila, dan tidak mengandung
-			pencemaran nama baik dari suatu individu atau instansi tertentu, maka karya Kakak punya 
-			potensi untuk dimuat.
-			Untuk lebih pastinya, langsung saja hubungi Chi nanti. Kami terbuka, kok, untuk diskusi.
-			Informasi terkait diskusi dengan tim UsWorks ada di bagian ketiga,
-			silakan lihat lebih lanjut di sana, ya.
+			Semuanya tanpa biaya, lho!
 		</p>
-    	<p class="text-black text-sm sm:text-lg bg-white bg-opacity-60 general-sans-regular mt-5">
-			Untuk detailnya, berikut adalah jenis tulisan yang kami terima:
-		</p>
-		<ul class="list-disc">
-			<li class="text-black text-sm sm:text-lg general-sans-regular mt-5">
-				<b>Series atau cerbung</b>: Silakan kirim series terbaik Kakak beserta keseluruhan plotnya,
-				alurnya secara garis besar, dan deskripsi karakter-karakternya. 
-				Siap-siap Kakak bakal ditanya banyak-banyak, nih, ya! 
-				<br>
-				<b>Batasan kata:</b> Tiap episode kira-kira mengandung 800 kata - 1300 kata. Tentu saja batas
-				ini bisa didiskusikan nanti dengan editor.
-			</li>
-			<li class="text-black text-sm sm:text-lg general-sans-regular mt-5">
-				<b>Cerpen</b>: Kita juga menerima cerpen. Kalau untuk cerpen, Kakak tidak harus mengirim detail-detail
-				cerita. Walau begitu, Kakak tetap bakal banyak ditanya soal cerpen Kakak, terutama makna di balik
-				ceritanya!
-				<br>
-				<b>Batasan kata:</b> Sama dengan cerbung, cerpen yang diserahkan harus mengandung sekitar 800 kata
-				- 1300 kata. Batasan ini juga bisa didiskusikan.
-			</li>
-			<li class="text-black text-sm sm:text-lg general-sans-regular mt-5">
-				<b>Artikel</b>: Kami menerima artikel dengan tema apapun. Tidak perlu menggunakan gaya bahasa formal.
-				Jika artikel tersebut berkaitan dengan fakta objektif, kami akan meminta Kakak untuk membuktikan
-				kebenaran artikel tersebut. Jadi kalau Kakak menulis
-				soal fakta, persiapkan sumber-sumber yang terpercaya, ya!
-				<br>
-				<b>Batasan kata:</b> Batasan kata untuk artikel lebih sedikit daripada cerpen dan cerbung. Sekitar 600
-				kata - 1000 kata. Tapi sama dengan cerpen dan cerbung, batasan kata ini juga bisa didiskusikan.
-			</li>
-		</ul>
     	<p class="text-black text-sm sm:text-lg bg-white bg-opacity-60 general-sans-regular mt-5">
 			Nah, bagaimana? Tertarikkah Kakak? Kalau begitu, 
-			silakan lihat bagian ketiga untuk detail tentang pengiriman naskah, diskusi, dan prosedur revisi!
+			silakan lihat bagian ketiga untuk detail tentang pengiriman lamaran.
 		</p>
     	<h2 class="text-white text-1xl sm:text-3xl bg-black bg-opacity-100 general-sans-semi-bold mt-10">
-			Kedua, mengirim gambar atau komik.
+			Kedua, gambar-menggambar.
 		</h2>
     	<p class="text-black text-sm sm:text-lg bg-white bg-opacity-60 general-sans-regular mt-5">
 			Nah, hal gambar-menggambar adalah bagian Kak Yuzu.
@@ -102,110 +79,96 @@
 			yang ada di website ini? Itu Kak Yuzu yang buat lho!
 		</p>
     	<p class="text-black text-sm sm:text-lg bg-white bg-opacity-60 general-sans-regular mt-5">
-			Majalah UsWorks menerima semua bentuk lukisan atau ilustrasi asalkan gambar tersebut bisa dipajang
+			Majalah UsWorks sedang membuka kesempatan bagi para <i>artist</i> yang ingin
+			gambarnya dimuat.
+			Boleh jadi Kakak ingin mengembangkan <i>audience</i>, sekedar pamer gambar, atau bahkan ingin menyampaikan
+			suatu pesan.
+			Di majalah UsWorks, Kakak bisa menggambar apapun asalkan gambar tersebut bisa dicetak
 			di atas kertas. Bisa jadi itu karya abstrak, lukisan pemandangan, ilustrasi <i>anime</i>, komik pendek, 
-			atau bahkan <i>pixel art</i>.
+			atau bahkan <i>pixel art</i>. Kakak boleh menggambar untuk setiap edisi, boleh juga menggambar hanya untuk
+			satu edisi.
 		</p>
     	<p class="text-black text-sm sm:text-lg bg-white bg-opacity-60 general-sans-regular mt-5">
-			Kami percaya bahwa setiap gambar memiliki makna tersendiri. Jadi, sama
-			dengan tulisan, tidak ada tema yang membatasi Kakak. Boleh banget Kakak menggambar OC Kakak, menggambar
-			<i>fanart</i> dari karakter kesukaan Kakak, menggambar <i>scene</i> dari film favorit Kakak,
-			atau bahkan karikatur terkait kejadian baru-baru ini. Asalkan gambar Kakak tidak menyinggung
-			SARA, tidak mengandung hal-hal asusila, dan tidak mengandung
-			pencemaran nama baik dari suatu individu atau instansi tertentu, maka gambar Kakak punya potensi
-			untuk dimuat! Untuk pastinya, kita bisa berdiskusi dahulu, kok. Alur diskusi akan dijelaskan di bagian
-			setelah ini, silakan lihat di sana, ya!
+			Kakak nanti bisa diskusi dengan Kak Yuzu untuk menentukan tema, merevisi bagian gambar, dan bahkan
+			berdiskusi tentang teknik atau teori, mulai dari soal anatomi, pencahayaan, sampai soal warna.
 		</p>
     	<p class="text-black text-sm sm:text-lg bg-white bg-opacity-60 general-sans-regular mt-5">
-			Gambar Kakak akan dicetak di atas kertas A5. Berikut adalah petunjuk ukuran gambarnya:
+			Bahkan kalau Kakak mau, kami juga akan mempersilakan Kakak untuk membuat ilustrasi bagi calon-calon
+			tulisan yang akan dimuat di majalah UsWorks.
 		</p>
     	<p class="text-black text-sm sm:text-lg bg-white bg-opacity-60 general-sans-regular mt-5">
-			<b>Ukuran dasar:</b> Ukuran dasar adalah 1754 x 2480, boleh rebah (<i>landscape</i>) dan
-			dan boleh tegak (<i>portrait</i>). Untuk selain <i>pixel art</i>, ukuran dasar adalah ukuran minimal.
-			Sedangkan untuk <i>pixel art</i>, ukuran gambar bebas, boleh lebih besar 
-			dan boleh lebih kecil daripada ukuran dasar,
-			asalkan sama dengan rasio di atas.
-		</p>
-    	<p class="text-black text-sm sm:text-lg bg-white bg-opacity-60 general-sans-regular mt-5">
-			<b>Ukuran selain dari yang disebutkan di atas harus masih berada di dalam rasio yang sama.
-			Misal: 2631 x 3720, di mana lebar dan tinggi dari ukuran dasar di sini sama-sama dikali 1,5.</b>
-		</p>
-    	<p class="text-black text-sm sm:text-lg bg-white bg-opacity-60 general-sans-regular mt-5">
-			Ingat, kalau Kakak mau menggunakan ukuran yang lebih kecil atau lebih besar daripada ukuran dasar, 
-			caranya adalah dengan
-			mengali atau membagi lebar dan tinggi dari ukuran dasar dengan satu angka yang sama. Misalnya, kalau
-			Kakak mau membuat gambar <i>pixel art</i> yang lebih kecil daripada ukuran dasar, Kakak bisa membagi
-			lebar dan tinggi dari ukuran dasar dengan dua. Sehingga, ukuran baru menjadi 1315,5 x 1860. Nah, ukuran 
-			baru ini bisa menjadi ukuran kanvas Kakak. Kalau masih belum kecil, silakan bagi lagi dengan dua.
-			Cara membesarkan juga sama. Hanya saja untuk membesarkan, alih-alih dibagi, lebar 
-			dan tinggi dikalikan dengan satu angka yang sama. Misalnya, kalau Kakak mau kanvas yang setengah
-			kali lebih besar daripada ukuran dasar, maka Kakak bisa mengalikan dengan 1,5, sehingga ukuran
-			kanvas Kakak menjadi 2631 x 3720.
-		</p>
-    	<p class="text-black text-sm sm:text-lg bg-white bg-opacity-60 general-sans-regular mt-5">
-			<b>"Kalau ukurannya harus beda, bagaimana?"</b>
-		</p>
-    	<p class="text-black text-sm sm:text-lg bg-white bg-opacity-60 general-sans-regular mt-5">
-			Tak apa-apa! Akan kita diskusikan cara kita menyesuaikan gambar tersebut di atas kertas A5. 
-			Yang penting, Kakak
-			menumpahkan jiwa Kakak ke atas gambar tersebut, dengan jerih payah dan keringat yang menetes. Nah,
-			kalau sudah begitu, karya Kakak pastinya punya potensi untuk dimuat di majalah UsWorks. 
-			Aturan kami cukup longgar, kok!
-		</p>
-    	<p class="text-black text-sm sm:text-lg bg-white bg-opacity-60 general-sans-regular mt-5">
-			<b>Opsional</b>: Kalau Kakak bersedia, kami akan mengirimkan kepada Kakak beberapa naskah 
-			yang dikirim ke UsWorks. 
-			Kakak bisa memilih satu naskah atau lebih, lalu Kakak bisa menggambar ilustrasi dari cerita tersebut. 
-			Tidak banyak-banyak, kok. Cuma satu ilustrasi untuk satu naskah. 
-			Bayangkan bagaimana rasanya membuat suatu karakter, momen, atau <i>scenery</i>
-			dari cerita yang Kakak sukai menjadi hidup dengan gambar Kakak!
-			<br>
-			<small>*Ini opsional. Hanya jika Kakak mau.</small>
-		</p>
-    	<p class="text-black text-sm sm:text-lg bg-white bg-opacity-60 general-sans-regular mt-5">
-			Begitulah! Siapkah Kakak untuk mengirimkan gambar terbaik Kakak ke majalah UsWorks? Silakan 
-			lihat bagian ketiga untuk detail cara mengirimkan karya dan proses diskusi pemuatan karya.
+			Siapkah Kakak untuk mengirimkan gambar terbaik Kakak ke majalah UsWorks? Silakan 
+			lihat bagian ketiga untuk detail cara mengirimkan lamaran.
 		</p>
     	<h2 class="text-white text-1xl sm:text-3xl bg-black bg-opacity-100 general-sans-semi-bold mt-10">
-			Ketiga, proses pemuatan karya.
+			Ketiga, mengirimkan lamaran.
 		</h2>
     	<p class="text-black text-sm sm:text-lg bg-white bg-opacity-60 general-sans-regular mt-5">
-			Kakak bisa mengirim karya Kakak, baik gambar ataupun tulisan, kepada Chi di <i>email</i>: <a class="text-blue-500" href="mailto:ciii1@proton.me"> ciii1@proton.me </a> 
-			atau untuk respon lebih cepat, melalui Instagram: <a class="text-blue-500" href="https://www.instagram.com/kusa.ci/">kusa.ci</a>.	
-			Karya Kakak akan diteliti terlebih dahulu, kalau gambar, oleh Kak Yuzu, dan kalau tulisan, oleh Chi.
+			Sebelum itu, perlu diingat, Kakak boleh menyebarkan karya Kakak yang telah kita revisi 
+			bersama di tempat-tempat lain.
+			Semua hak cipta milik Kakak! Kakak hanya harus mengizinkan majalah UsWorks menyebarkan
+			karya Kakak secara tertulis. Sehingga, kami akan meminta Kakak untuk menandatangani 
+			surat perjanjian di awal. Jangan khawatir, cuma surat dalam bentuk PDF, kok. Kalau Kakak mau,
+			kami akan menunjukkan kepada Kakak cara menandatanganinya secara digital nanti.
 		</p>
     	<p class="text-black text-sm sm:text-lg bg-white bg-opacity-60 general-sans-regular mt-5">
-			<b> Ingat, tidak ada karya yang ditolak tanpa diskusi. </b>
+			Kakak bisa mengirim lamaran Kakak kepada Chi 
+			di <i>email</i>: <a class="text-blue-500" href="mailto:ciii1@proton.me"> ciii1@proton.me </a> 
+			atau untuk respon lebih cepat, melalui 
+			Instagram: <a class="text-blue-500" href="https://www.instagram.com/kusa.ci/">kusa.ci</a>.	
+			Data diri dan karya-karya Kakak akan diteliti terlebih dahulu, 
+			kalau gambar, oleh Kak Yuzu, dan kalau tulisan, oleh Chi.
+			Kakak akan harus menyertakan data diri dan beberapa karya Kakak sebelumnya. Berikut templatnya:
+		</p>
+		<ul class="list-disc">
+			<li class="text-black text-sm sm:text-lg general-sans-regular mt-5">
+				Nama atau nama pena.
+			</li>
+			<li class="text-black text-sm sm:text-lg general-sans-regular mt-5">
+				Jenis kelamin (<i>birth-assigned</i>/saat lahir)
+			</li>
+			<li class="text-black text-sm sm:text-lg general-sans-regular mt-5">
+				Umur
+			</li>
+			<li class="text-black text-sm sm:text-lg general-sans-regular mt-5">
+				Asal provinsi
+			</li>
+			<li class="text-black text-sm sm:text-lg general-sans-regular mt-5">
+				Beberapa patah kata berisi perkenalan diri lebih lanjut dan mengapa Kakak tertarik untuk
+				bergabung dengan majalah UsWorks.
+			</li>
+			<li class="text-black text-sm sm:text-lg general-sans-regular mt-5">
+				<i>Link-link</i> ke beberapa karya terbaik Kakak sebelumnya
+				(minimal satu naskah kalau tulisan, dan minimal tiga buah
+				kalau gambar). Kalau karyanya berbentuk gambar, 
+				boleh langsung diunggah di dalam pesan <i>email</i> atau pesan
+				Instagram.
+			</li>
+		</ul>
+    	<p class="text-black text-sm sm:text-lg bg-white bg-opacity-60 general-sans-regular mt-5">
+			Kami akan meneliti lamaran Kakak dan mengabarkan Kakak secepat mungkin.
 		</p>
     	<p class="text-black text-sm sm:text-lg bg-white bg-opacity-60 general-sans-regular mt-5">
-			Setelah itu, kami akan membuat <i>group chat</i> di Whatsapp, Instagram, atau Discord (tergantung
-			pilihan Kakak nanti), menyertakan Kakak,
-			Chi, dan Kak Yuzu. Pertama sekali, kami akan meminta Kakak untuk menandatangani perjanjian terkait hak cipta
-			dan bayaran.
+			Walau begitu, kami mempunyai beberapa syarat internal yang harus kami penuhi.
+			Sehingga kalaupun Kakak dengan terpaksa tidak bisa kami terima, itu bukanlah karena
+			karya Kakak yang tidak layak. Itu justru berarti kami merasa bahwa
+			jalan Kakak tidaklah bersama kami. Kamilah yang tidak mampu untuk menampung
+			gemilangnya karya Kakak. Kami yakin pasti Kakak akan menemukan jalan yang
+			jauh lebih baik. Kami mendukung Kakak untuk berjuang meniti
+			jalan lain yang lebih baik itu.
 		</p>
     	<p class="text-black text-sm sm:text-lg bg-white bg-opacity-60 general-sans-regular mt-5">
-			Nah, selanjutnya, kita akan membahas setiap aspek dari karya Kakak di grup itu. 
-			Di dalam grup, Chi dan Kak Yuzu akan banyak bertanya mengenai karya Kakak dan
-			berdiskusi mengenai hal-hal yang bisa ditingkatkan.
-			Demi kemudahan, jika karya tersebut berbentuk tulisan, Chi akan membuat dokumen Google Docs 
-			(atau platform serupa yang Kakak ingin pakai) lalu menyalin tulisan Kakak di dalamnya. Dokumen itu
-			akan digunakan sebagai basis kerja bagi kita
-			untuk merevisi tulisan Kakak. Jangan khawatir, jika dibutuhkan, kami akan memperjelas semua
-			prosedur di dalam <i>group chat</i>, termasuk cara memakai Google Docs.
-		</p>
-
-    	<h2 class="text-white text-1xl sm:text-3xl bg-black bg-opacity-100 general-sans-semi-bold mt-10">
-			FAQ
-		</h2>
-    	<h2 class="text-white text-md sm:text-1xl bg-black bg-opacity-100 general-sans-semi-bold mt-10">
-			Karya di luar yang telah disebutkan di atas.
-		</h2>
-    	<p class="text-black text-sm sm:text-lg bg-white bg-opacity-60 general-sans-regular mt-5">
-			"Wah, lalu bagaimana kalau aku punya karya yang jenisnya tidak disebutkan di atas?"
+			Sebaliknya, jika Kakak kami terima, maka kami akan berusaha sekuat mungkin untuk
+			mengembangkan dan menyebarkan karya Kakak. 
+			Yuk, kita bersama-sama berjuang dan <i>have fun</i>!
 		</p>
     	<p class="text-black text-sm sm:text-lg bg-white bg-opacity-60 general-sans-regular mt-5">
-			Jangan khawatir! Batasan yang kami berikan tidak bersifat mutlak. Semuanya bisa kita diskusikan. Selama 
-			Kakak menaruh jerih payah Kakak ke dalam karya Kakak, maka karya itu punya potensi untuk dimuat.
+			Baik diterima ataupun tidak diterima, kami akan tetap mengabari Kakak, kok. Sehingga, 
+			tidak ada ruginya mencoba. Tidak ada biaya pendaftaran, tidak ada denda, tidak ada juga kutukan
+			yang akan merasuki Kakak.
+		</p>
+    	<p class="text-black text-sm sm:text-lg bg-white bg-opacity-60 general-sans-regular mt-5">
+			Kami tunggu, ya!
 		</p>
     	<h2 class="text-white text-md sm:text-1xl bg-black bg-opacity-100 general-sans-semi-bold mt-10">
 			Hak cipta dan lisensi.
