change instagram link

--- a/kontribusi.html
+++ b/kontribusi.html
@@ -114,8 +114,7 @@
     	<p class="text-black text-sm sm:text-lg bg-white bg-opacity-60 general-sans-regular mt-5">
 			Kakak bisa mengirim lamaran Kakak kepada Chi 
 			di <i>email</i>: <a class="text-blue-500" href="mailto:ciii1@proton.me"> ciii1@proton.me </a> 
-			atau untuk respon lebih cepat, melalui 
-			Instagram: <a class="text-blue-500" href="https://www.instagram.com/kusa.ci/">kusa.ci</a>.	
+			atau untuk respon lebih cepat, Rafliisme melalui Instagram: <a class="text-blue-500" href="https://www.instagram.com/rafliismewp/">rafliismewp</a>. 
 			Data diri dan karya-karya Kakak akan diteliti terlebih dahulu, 
 			kalau gambar, oleh Kak Yuzu, dan kalau tulisan, oleh Chi.
 			Kakak akan harus menyertakan data diri dan beberapa karya Kakak sebelumnya. Berikut templatnya:
