add logo and change color scheme

--- a/kontribusi.html
+++ b/kontribusi.html
@@ -14,32 +14,38 @@
 		.img-sm {
 			background-position: 70% center;
 		}
+		.text-blue {
+			color: #063970;	
+		}
+		.bg-blue {
+			background-color: #63a6f6;	
+		}
     </style>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
 </head>
 <body class="overflow-x-hidden">
 	<div class="flex flex-col items-start justify-start ml-5 sm:p-4 h-screen">
-    	<h1 class="text-white text-2xl sm:text-5xl bg-black bg-opacity-100 general-sans-semi-bold mt-10">
+    	<h1 class="text-white text-2xl sm:text-5xl bg-blue bg-opacity-100 general-sans-semi-bold mt-10">
 			Menjadi penulis atau
 		</h1>
-    	<h1 class="text-white text-2xl sm:text-5xl bg-black bg-opacity-100 general-sans-semi-bold">
+    	<h1 class="text-white text-2xl sm:text-5xl bg-blue bg-opacity-100 general-sans-semi-bold">
 			<i>artist</i> di
 		</h1>
-    	<h1 class="text-white text-2xl sm:text-5xl bg-black bg-opacity-100 general-sans-semi-bold">
+    	<h1 class="text-white text-2xl sm:text-5xl bg-blue bg-opacity-100 general-sans-semi-bold">
 			majalah UsWorks
 		</h1>
-    	<p class="text-black text-sm sm:text-lg bg-white bg-opacity-60 general-sans-regular mt-5">
+    	<p class="text-blue text-sm sm:text-lg bg-white bg-opacity-60 general-sans-regular mt-5">
 			Haiii, aku Chi, editor utama dari majalah UsWorks.
 		</p>
-    	<p class="text-black text-sm sm:text-lg bg-white bg-opacity-60 general-sans-regular mt-5">
+    	<p class="text-blue text-sm sm:text-lg bg-white bg-opacity-60 general-sans-regular mt-5">
 			Sebelumnya, terima kasih udah mau mengunjungi website kami. Terima kasih lebih banyak lagi udah menaruh
 			perhatian pada majalah UsWorks ini. Kami lagi mencari para penulis dan <i>artist</i> yang mau
 			bergabung di majalah UsWorks, nih! Berikut Chi jelaskan kegiatan-kegiatan kami.
 		</p>
-    	<h2 class="text-white text-1xl sm:text-3xl bg-black bg-opacity-100 general-sans-semi-bold mt-10">
+    	<h2 class="text-white text-1xl sm:text-3xl bg-blue bg-opacity-100 general-sans-semi-bold mt-10">
 			Pertama, tulis-menulis.
 		</h2>
-    	<p class="text-black text-sm sm:text-lg bg-white bg-opacity-60 general-sans-regular mt-5">
+    	<p class="text-blue text-sm sm:text-lg bg-white bg-opacity-60 general-sans-regular mt-5">
 			Jadi, majalah UsWorks sedang mencari penulis yang mau cerita atau artikelnya dimuat.
 			Kami menerima penulis dengan latar belakang dan motivasi apapun.
 			Boleh jadi Kakak ingin memperbesar <i>reader base</i>
@@ -49,7 +55,7 @@
 			Bagaimana pun latar belakang Kakak, kami percaya pasti Kakak punya tulisan yang layak
 			untuk disampaikan. Tugas kami adalah membantu Kakak untuk memoles cerita Kakak lalu menyebarkannya. 
 		</p>
-    	<p class="text-black text-sm sm:text-lg bg-white bg-opacity-60 general-sans-regular mt-5">
+    	<p class="text-blue text-sm sm:text-lg bg-white bg-opacity-60 general-sans-regular mt-5">
 			Kakak bisa menulis cerbung/<i>series</i>, cerpen, artikel, dan bahkan puisi. Kakak
 			boleh menulis untuk setiap edisi, boleh juga menulis hanya untuk satu edisi. Kakak boleh
 			memberikan karya lama ataupun membuat karya baru. Kalau Kakak ingin membuat karya baru, nanti kita bisa
@@ -63,22 +69,22 @@
 			Akan kita diskusikan sama-sama hingga karya Kakak bisa terbungkus dengan 
 			bungkusan yang paling cantik dan rapi.
 		</p>
-    	<p class="text-black text-sm sm:text-lg bg-white bg-opacity-60 general-sans-regular mt-5">
+    	<p class="text-blue text-sm sm:text-lg bg-white bg-opacity-60 general-sans-regular mt-5">
 			Semuanya tanpa biaya, lho!
 		</p>
-    	<p class="text-black text-sm sm:text-lg bg-white bg-opacity-60 general-sans-regular mt-5">
+    	<p class="text-blue text-sm sm:text-lg bg-white bg-opacity-60 general-sans-regular mt-5">
 			Nah, bagaimana? Tertarikkah Kakak? Kalau begitu, 
 			silakan lihat bagian ketiga untuk detail tentang pengiriman lamaran.
 		</p>
-    	<h2 class="text-white text-1xl sm:text-3xl bg-black bg-opacity-100 general-sans-semi-bold mt-10">
+    	<h2 class="text-white text-1xl sm:text-3xl bg-blue bg-opacity-100 general-sans-semi-bold mt-10">
 			Kedua, gambar-menggambar.
 		</h2>
-    	<p class="text-black text-sm sm:text-lg bg-white bg-opacity-60 general-sans-regular mt-5">
+    	<p class="text-blue text-sm sm:text-lg bg-white bg-opacity-60 general-sans-regular mt-5">
 			Nah, hal gambar-menggambar adalah bagian Kak Yuzu.
 			Perkenalkan, Kak Yuzu adalah ilustrator dan desainer utama dari majalah UsWorks. Lihat gambar-gambar
 			yang ada di website ini? Itu Kak Yuzu yang buat lho!
 		</p>
-    	<p class="text-black text-sm sm:text-lg bg-white bg-opacity-60 general-sans-regular mt-5">
+    	<p class="text-blue text-sm sm:text-lg bg-white bg-opacity-60 general-sans-regular mt-5">
 			Majalah UsWorks sedang membuka kesempatan bagi para <i>artist</i> yang ingin
 			gambarnya dimuat.
 			Boleh jadi Kakak ingin mengembangkan <i>audience</i>, sekedar pamer gambar, atau bahkan ingin menyampaikan
@@ -88,22 +94,22 @@
 			atau bahkan <i>pixel art</i>. Kakak boleh menggambar untuk setiap edisi, boleh juga menggambar hanya untuk
 			satu edisi.
 		</p>
-    	<p class="text-black text-sm sm:text-lg bg-white bg-opacity-60 general-sans-regular mt-5">
+    	<p class="text-blue text-sm sm:text-lg bg-white bg-opacity-60 general-sans-regular mt-5">
 			Kakak nanti bisa diskusi dengan Kak Yuzu untuk menentukan tema, merevisi bagian gambar, dan bahkan
 			berdiskusi tentang teknik atau teori, mulai dari soal anatomi, pencahayaan, sampai soal warna.
 		</p>
-    	<p class="text-black text-sm sm:text-lg bg-white bg-opacity-60 general-sans-regular mt-5">
+    	<p class="text-blue text-sm sm:text-lg bg-white bg-opacity-60 general-sans-regular mt-5">
 			Bahkan kalau Kakak mau, kami juga akan mempersilakan Kakak untuk membuat ilustrasi bagi calon-calon
 			tulisan yang akan dimuat di majalah UsWorks.
 		</p>
-    	<p class="text-black text-sm sm:text-lg bg-white bg-opacity-60 general-sans-regular mt-5">
+    	<p class="text-blue text-sm sm:text-lg bg-white bg-opacity-60 general-sans-regular mt-5">
 			Siapkah Kakak untuk mengirimkan gambar terbaik Kakak ke majalah UsWorks? Silakan 
 			lihat bagian ketiga untuk detail cara mengirimkan lamaran.
 		</p>
-    	<h2 class="text-white text-1xl sm:text-3xl bg-black bg-opacity-100 general-sans-semi-bold mt-10">
+    	<h2 class="text-white text-1xl sm:text-3xl bg-blue bg-opacity-100 general-sans-semi-bold mt-10">
 			Ketiga, mengirimkan lamaran.
 		</h2>
-    	<p class="text-black text-sm sm:text-lg bg-white bg-opacity-60 general-sans-regular mt-5">
+    	<p class="text-blue text-sm sm:text-lg bg-white bg-opacity-60 general-sans-regular mt-5">
 			Sebelum itu, perlu diingat, Kakak boleh menyebarkan karya Kakak yang telah kita revisi 
 			bersama di tempat-tempat lain.
 			Semua hak cipta milik Kakak! Kakak hanya harus mengizinkan majalah UsWorks menyebarkan
@@ -111,7 +117,7 @@
 			surat perjanjian di awal. Jangan khawatir, cuma surat dalam bentuk PDF, kok. Kalau Kakak mau,
 			kami akan menunjukkan kepada Kakak cara menandatanganinya secara digital nanti.
 		</p>
-    	<p class="text-black text-sm sm:text-lg bg-white bg-opacity-60 general-sans-regular mt-5">
+    	<p class="text-blue text-sm sm:text-lg bg-white bg-opacity-60 general-sans-regular mt-5">
 			Kakak bisa mengirim lamaran Kakak kepada Chi 
 			di <i>email</i>: <a class="text-blue-500" href="mailto:ciii1@proton.me"> ciii1@proton.me </a> 
 			atau untuk respon lebih cepat, Rafliisme melalui Instagram: <a class="text-blue-500" href="https://www.instagram.com/rafliismewp/">rafliismewp</a>. 
@@ -120,23 +126,23 @@
 			Kakak akan harus menyertakan data diri dan beberapa karya Kakak sebelumnya. Berikut templatnya:
 		</p>
 		<ul class="list-disc">
-			<li class="text-black text-sm sm:text-lg general-sans-regular mt-5">
+			<li class="text-blue text-sm sm:text-lg general-sans-regular mt-5">
 				Nama atau nama pena.
 			</li>
-			<li class="text-black text-sm sm:text-lg general-sans-regular mt-5">
+			<li class="text-blue text-sm sm:text-lg general-sans-regular mt-5">
 				Jenis kelamin (<i>birth-assigned</i>/saat lahir)
 			</li>
-			<li class="text-black text-sm sm:text-lg general-sans-regular mt-5">
+			<li class="text-blue text-sm sm:text-lg general-sans-regular mt-5">
 				Umur
 			</li>
-			<li class="text-black text-sm sm:text-lg general-sans-regular mt-5">
+			<li class="text-blue text-sm sm:text-lg general-sans-regular mt-5">
 				Asal provinsi
 			</li>
-			<li class="text-black text-sm sm:text-lg general-sans-regular mt-5">
+			<li class="text-blue text-sm sm:text-lg general-sans-regular mt-5">
 				Beberapa patah kata berisi perkenalan diri lebih lanjut dan mengapa Kakak tertarik untuk
 				bergabung dengan majalah UsWorks.
 			</li>
-			<li class="text-black text-sm sm:text-lg general-sans-regular mt-5">
+			<li class="text-blue text-sm sm:text-lg general-sans-regular mt-5">
 				<i>Link-link</i> ke beberapa karya terbaik Kakak sebelumnya
 				(minimal satu naskah kalau tulisan, dan minimal tiga buah
 				kalau gambar). Kalau karyanya berbentuk gambar, 
@@ -144,10 +150,10 @@
 				Instagram.
 			</li>
 		</ul>
-    	<p class="text-black text-sm sm:text-lg bg-white bg-opacity-60 general-sans-regular mt-5">
+    	<p class="text-blue text-sm sm:text-lg bg-white bg-opacity-60 general-sans-regular mt-5">
 			Kami akan meneliti lamaran Kakak dan mengabarkan Kakak secepat mungkin.
 		</p>
-    	<p class="text-black text-sm sm:text-lg bg-white bg-opacity-60 general-sans-regular mt-5">
+    	<p class="text-blue text-sm sm:text-lg bg-white bg-opacity-60 general-sans-regular mt-5">
 			Walau begitu, kami mempunyai beberapa syarat internal yang harus kami penuhi.
 			Sehingga kalaupun Kakak dengan terpaksa tidak bisa kami terima, itu bukanlah karena
 			karya Kakak yang tidak layak. Itu justru berarti kami merasa bahwa
@@ -156,26 +162,26 @@
 			jauh lebih baik. Kami mendukung Kakak untuk berjuang meniti
 			jalan lain yang lebih baik itu.
 		</p>
-    	<p class="text-black text-sm sm:text-lg bg-white bg-opacity-60 general-sans-regular mt-5">
+    	<p class="text-blue text-sm sm:text-lg bg-white bg-opacity-60 general-sans-regular mt-5">
 			Sebaliknya, jika Kakak kami terima, maka kami akan berusaha sekuat mungkin untuk
 			mengembangkan dan menyebarkan karya Kakak. 
 			Yuk, kita bersama-sama berjuang dan <i>have fun</i>!
 		</p>
-    	<p class="text-black text-sm sm:text-lg bg-white bg-opacity-60 general-sans-regular mt-5">
+    	<p class="text-blue text-sm sm:text-lg bg-white bg-opacity-60 general-sans-regular mt-5">
 			Baik diterima ataupun tidak diterima, kami akan tetap mengabari Kakak, kok. Sehingga, 
 			tidak ada ruginya mencoba. Tidak ada biaya pendaftaran, tidak ada denda, tidak ada juga kutukan
 			yang akan merasuki Kakak.
 		</p>
-    	<p class="text-black text-sm sm:text-lg bg-white bg-opacity-60 general-sans-regular mt-5">
+    	<p class="text-blue text-sm sm:text-lg bg-white bg-opacity-60 general-sans-regular mt-5">
 			Kami tunggu, ya!
 		</p>
-    	<h2 class="text-white text-md sm:text-1xl bg-black bg-opacity-100 general-sans-semi-bold mt-10">
+    	<h2 class="text-white text-md sm:text-1xl bg-blue bg-opacity-100 general-sans-semi-bold mt-10">
 			Hak cipta dan lisensi.
 		</h2>
-    	<p class="text-black text-sm sm:text-lg bg-white bg-opacity-60 general-sans-regular mt-5">
+    	<p class="text-blue text-sm sm:text-lg bg-white bg-opacity-60 general-sans-regular mt-5">
 			"Bagaimana dengan hak cipta dari karya-karya yang ada di dalam majalah UsWorks?"
 		</p>
-    	<p class="text-black text-sm sm:text-lg bg-white bg-opacity-60 general-sans-regular mt-5">
+    	<p class="text-blue text-sm sm:text-lg bg-white bg-opacity-60 general-sans-regular mt-5">
 			Kakak bebas mendaftarkan hak cipta dari karya Kakak atas nama Kakak atau memilih lisensi yang telah tersedia
 			dengan syarat Kakak mengizinkan majalah UsWorks untuk menyebarkan karya Kakak secara tertulis.
 			Untuk informasi lebih lanjut tentang mendaftarkan hak cipta atas karya Kakak, silakan lihat 
@@ -184,7 +190,7 @@
 			</a>
 			.
 		</p>
-    	<p class="text-black text-sm sm:text-lg bg-white bg-opacity-60 general-sans-regular mt-5">
+    	<p class="text-blue text-sm sm:text-lg bg-white bg-opacity-60 general-sans-regular mt-5">
 			Sedangkan jika Kakak tidak mendaftarkan hak cipta atau tidak memperincikan lisensi yang Kakak ingin pakai
 			untuk karya Kakak, maka
 			karya yang dimuat di dalam majalah UsWorks otomatis berada di bawah naungan lisensi CC BY 4.0, 
@@ -193,7 +199,7 @@
 			karya Kakak. Akan tetapi, versi-versi dari karya Kakak sebelum perubahan tersebut dibuat akan tetap
 			berada di bawah naungan lisensi CC BY 4.0.
 		</p>
-    	<p class="text-black text-sm sm:text-lg bg-white bg-opacity-60 general-sans-regular mt-5">
+    	<p class="text-blue text-sm sm:text-lg bg-white bg-opacity-60 general-sans-regular mt-5">
 			Creative Commons Attribution 4.0 sendiri adalah lisensi <i>non-profit</i> yang memperbolehkan
 			orang lain untuk menyebarkan dan mengadaptasi karya Kakak walau untuk kepentingan komersil, dengan
 			syarat ia harus mencatumkan nama Kakak, tautan terhadap lisensi, dan perubahan yang telah ia buat.
