--- a/pembagian.html
+++ b/pembagian.html
@@ -14,22 +14,28 @@
 		.img-sm {
 			background-position: 70% center;
 		}
+		.text-blue {
+			color: #063970;	
+		}
+		.bg-blue {
+			background-color: #63a6f6;	
+		}
     </style>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
 </head>
 <body class="overflow-x-hidden">
 	<div class="flex flex-col items-start justify-start ml-5 sm:p-4 h-screen">
-    	<h1 class="text-white text-2xl sm:text-5xl bg-black bg-opacity-100 general-sans-semi-bold mt-10">
+    	<h1 class="text-white text-2xl sm:text-5xl bg-blue bg-opacity-100 general-sans-semi-bold mt-10">
 			Mendapatkan majalah
 		</h1>
-    	<h1 class="text-white text-2xl sm:text-5xl bg-black bg-opacity-100 general-sans-semi-bold">
+    	<h1 class="text-white text-2xl sm:text-5xl bg-blue bg-opacity-100 general-sans-semi-bold">
 			UsWorks.
 		</h1>
-    	<p class="text-black text-sm sm:text-lg bg-white bg-opacity-60 general-sans-regular mt-5">
+    	<p class="text-blue text-sm sm:text-lg bg-white bg-opacity-60 general-sans-regular mt-5">
 			Haiii, terima kasih udah mampir! Terima kasih lebih banyak lagi udah mau menaruh perhatian ke
 			majalah UsWorks ini. 
 		</p>
-    	<p class="text-black text-sm sm:text-lg bg-white bg-opacity-60 general-sans-regular mt-5">
+    	<p class="text-blue text-sm sm:text-lg bg-white bg-opacity-60 general-sans-regular mt-5">
 			Kalau soal jadwal pembagian dan penerbitan edisi baru, maaf banget! Tapi kami tidak
 			punya jadwal khusus. Bisa jadi kami
 			membagikan satu edisi selama tiga bulan, bisa jadi
@@ -37,13 +43,13 @@
 			Pokoknya, saat semua karya sudah siap, kami akan segera membagikan dan menerbitkan
 			edisi baru.
 		</p>
-    	<p class="text-black text-sm sm:text-lg bg-white bg-opacity-60 general-sans-regular mt-5">
+    	<p class="text-blue text-sm sm:text-lg bg-white bg-opacity-60 general-sans-regular mt-5">
 			Kalau soal distribusi dan pembagian, untuk saat ini, kami mempunyai tiga sistem:
 		</p>
-    	<h2 class="text-white text-1xl sm:text-3xl bg-black bg-opacity-100 general-sans-semi-bold mt-10">
+    	<h2 class="text-white text-1xl sm:text-3xl bg-blue bg-opacity-100 general-sans-semi-bold mt-10">
 			Pertama, pembagian gratis.
 		</h2>
-    	<p class="text-black text-sm sm:text-lg bg-white bg-opacity-60 general-sans-regular mt-5">
+    	<p class="text-blue text-sm sm:text-lg bg-white bg-opacity-60 general-sans-regular mt-5">
 			Untuk sirkulasi di Padang, Sumatera Barat, majalah UsWorks umumnya dibagikan 
 			di <i>event-event</i> jejepangan atau 
 			<i>event-event</i> literatur dan beberapa
@@ -51,10 +57,10 @@
 			majalah UsWorks. Silakan perkenalkan diri Kakak di sana dan tanyakan apapun yang ingin Kakak tanya.
 			Akan kami taruh <i>link</i>-nya di sini secepatnya.
 		</p>
-    	<h2 class="text-white text-1xl sm:text-3xl bg-black bg-opacity-100 general-sans-semi-bold mt-10">
+    	<h2 class="text-white text-1xl sm:text-3xl bg-blue bg-opacity-100 general-sans-semi-bold mt-10">
 			Kedua, pembelian.
 		</h2>
-    	<p class="text-black text-sm sm:text-lg bg-white bg-opacity-60 general-sans-regular mt-5">
+    	<p class="text-blue text-sm sm:text-lg bg-white bg-opacity-60 general-sans-regular mt-5">
 			Sayangnya, kalau Kakak ingin mempunyai cetakan fisik tanpa harus mengikuti kami di <i>event-event</i>,
 			Kakak bakal harus membeli majalah UsWorks. Maaf ya, cetakan fisik yang kami bagikan
 			terbatas.
@@ -71,10 +77,10 @@
 			di sini
 			</a>.
 		</p>
-    	<h2 class="text-white text-1xl sm:text-3xl bg-black bg-opacity-100 general-sans-semi-bold mt-10">
+    	<h2 class="text-white text-1xl sm:text-3xl bg-blue bg-opacity-100 general-sans-semi-bold mt-10">
 			Ketiga, versi digital.
 		</h2>
-    	<p class="text-black text-sm sm:text-lg bg-white bg-opacity-60 general-sans-regular mt-5">
+    	<p class="text-blue text-sm sm:text-lg bg-white bg-opacity-60 general-sans-regular mt-5">
 			Kalau Kakak tidak masalah membaca versi digital, kami menyediakan PDF dari majalah UsWorks yang bisa Kakak
 			unduh. Versi digital dari setiap edisi baru kami letakkan di situs ini seminggu setelah pembagian
 			cetakan fisik. Untuk saat ini, belum ada edisi yang keluar.
