--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>UsWorks</title>
+	<link rel="shortcut icon" href="favicon.ico"/>
     <style>
         @import url('css/general-sans.css');
         .general-sans-semi-bold {
